--- a/OvSuMusic.WebApi/OvSuMusic.WebApi.csproj
+++ b/OvSuMusic.WebApi/OvSuMusic.WebApi.csproj
@@ -4,4 +4,15 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.2">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\OvSuMusic.Data\OvSuMusic.Data.csproj" />
+  </ItemGroup>
+
 </Project>
